@@ -1,10 +1,6 @@
 #include "BehaviorTree/BTNode.h"
 #include "BehaviorTree/BTDecoratorNode.h"
 
-BTNegateNode::BTNegateNode()
-    : BTDecoratorNode()
-{}
-
 BTStatus BTNegateNode::Execute(BTContext* ctx)
 {
     if (!m_initialized) {
@@ -22,3 +18,20 @@ BTStatus BTNegateNode::Execute(BTContext* ctx)
         return BTStatus::Running;
     }
 }
+
+BTStatus BTRepeatNode::Execute(BTContext* ctx)
+{
+    if (!m_initialized) {
+        OnInit();
+        m_initialized = true;
+    }
+
+    BTStatus s = m_children[0]->Execute(ctx);
+    if (s == BTStatus::Failure) {
+        return s;
+    } else if (++m_now == m_limit) {
+        return BTStatus::Success;
+    }
+
+    return BTStatus::Running;
+    }
