@@ -1,3 +1,7 @@
+2018-09-22  vaiorabbit
+
+	* Fixed BTDemo.cpp
+
 2018-09-17  vaiorabbit
 
 	* Added some nodes.
